changed post to topics in erb action

--- a/views/signup.erb
+++ b/views/signup.erb
@@ -39,7 +39,7 @@
           <a class="navbar-brand" href="https://en.wikipedia.org/wiki/Extraterrestrial_life">Extraterrestrial life</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" method="get">
+          <form class="navbar-form navbar-right" method="post" action"/topics">
             <div class="form-group">
               <input type="text" name="user_name" placeholder="Your name" class="user_name" id="user_name">
             </div>
